--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
-  "name": "googlealex",
+  "name": "discord-js-moderator",
   "version": "1.0.0",
-  "description": "This bot has google support.",
-  "main": "GoogleAlex.js",
+  "description": "A bot used to help moderate discord.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "eslint src/",
+    "start": "npm run update && node src/index.js",
+    "update": "git pull && npm install"
   },
-  "author": "Alex",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hydrabolt/discord-js-moderator.git"
+  },
+  "keywords": [
+    "discord",
+    "moderator",
+    "discord.js",
+    "moderate",
+    "bot"
+  ],
+  "author": "Amish Shah <amishshah.2k@gmail.com>",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/hydrabolt/discord-js-moderator/issues"
+  },
+  "homepage": "https://github.com/hydrabolt/discord-js-moderator#readme",
   "dependencies": {
     "discord.js": "github:hydrabolt/discord.js#master",
     "github-webhook-handler": "^0.6.0"
