--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This bot has google support.",
   "main": "GoogleAlex.js",
   "engines": {
-    "node": "8.x"
+    "node": "8.9.3"
   },
   "scripts": {
     "start": "node bot.js"
@@ -12,6 +12,7 @@
   "author": "Alex",
   "license": "ISC",
   "dependencies": {
+    "check-node-version": "^3.2.0",
     "discord.js": "^12.0.0-dev"
   }
 }
